--- a/sample/user-card.html
+++ b/sample/user-card.html
@@ -15,6 +15,6 @@
 </head>
 <body>
     <div class="user-card" data-user="vishnnuv"></div>
-    <script src="user-card.js"></script>
+    <script src="https://vishnnuv.github.io/user-card/user-card.js"></script>
 </body>
 </html>
